[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/actor/monsterAttacks/MagicAttack.gd" type="Script" id=1]

[node name="MagicAttack" type="Node2D"]
script = ExtResource( 1 )

[node name="FireSpawner" type="Node2D" parent="."]
position = Vector2( 1, 0 )

[node name="FireSpawner2" type="Node2D" parent="."]
position = Vector2( -1, 0 )
rotation = 3.14159

[node name="FireSpawner3" type="Node2D" parent="."]
position = Vector2( 0, 1 )
rotation = -1.5708

[node name="FireSpawner4" type="Node2D" parent="."]
position = Vector2( 0, -1 )
rotation = 1.5708

[node name="FireSpawner5" type="Node2D" parent="."]
position = Vector2( 0.5, -0.5 )
rotation = 0.785398

[node name="FireSpawner6" type="Node2D" parent="."]
position = Vector2( -0.5, -0.5 )
rotation = -0.785398

[node name="FireSpawner7" type="Node2D" parent="."]
position = Vector2( 0.5, 0.5 )
rotation = 2.35619

[node name="FireSpawner8" type="Node2D" parent="."]
position = Vector2( -0.5, 0.5 )
rotation = 3.92699

[node name="AttackTimer" type="Timer" parent="."]

[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
